# Project-1

./: Docker-compose.yml  Dockerfile.backend  Dockerfile.frontend  README.md  classified_logs.csv  docker-compose.yml  docker_process.md  main.py  processor_embedding.py  processor_llm.py  processor_regex.py  pyproject.toml  server.py  test_script.py
.github/workflows/: cicd.yaml
frontend/: app.py
model/: log_classifier.joblib
training/: add_mlflow_cell.py  exp_1.ipynb  log_classifier.joblib
training/dataset/: synthetic_logs.csv
